tests-e2e/tests/snapshots/cli__invalid_choice.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [invalid_choice] · command line:1:20
  •
  │
  • invalid value 'alway' for '--color'
  │   [possible values: auto, always, never]
  │
  │   tip: a similar value exists: 'always'
  │
  │ For more information, try '--help'.
  │
  │   iris build --color alway
  │                      ╰────
  •
