tests-e2e/tests/snapshots/cli__invalid_choice_equals.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [invalid_choice] · command line:1:20
  •
  │
  • invalid value 'verböse' for '--lsp-log'
  │   [possible values: off, error, warn, info, debug, trace]
  │
  │ For more information, try '--help'.
  │
  │   iris lsp --lsp-log=verböse
  │                      ╰──────
  •
