tests-e2e/tests/snapshots/cli__invalid_choice_escaped.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [invalid_choice] · command line:1:21
  •
  │
  • invalid value 'warn
  │ "λ"' for '--lsp-log'
  │   [possible values: off, error, warn, info, debug, trace]
  │
  │   tip: a similar value exists: 'warn'
  │
  │ For more information, try '--help'.
  │
  │   iris lsp --lsp-log "warn\n\"λ\""
  │                       ╰──────────
  •
