tests-e2e/tests/snapshots/cli__removed_diagnostics_on_change.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:10
  •
  │
  • unexpected argument '--diagnostics-on-change' found
  │
  │ Usage: iris lsp [FLAGS]
  │
  │ For more information, try '--help'.
  │
  │   iris lsp --diagnostics-on-change
  │            ╰──────────────────────
  •
